[gd_scene load_steps=2 format=2]

[ext_resource path="res://weapon/projectile/Projectile.gd" type="Script" id=1]

[node name="Projectile" type="RigidBody2D"]
collision_layer = 32
collision_mask = 17
continuous_cd = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="ExpiryTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_shape_entered" from="." to="." method="_on_impact"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_ExpiryTimer_timeout"]
